done use case section

--- a/Projects/Landing-Pages/Cursor/index.html
+++ b/Projects/Landing-Pages/Cursor/index.html
@@ -48,9 +48,15 @@
       </div>
       <div>
         <ul class="main-nav-list">
-          <li><a href="#" class="nav-link">Features</a></li>
-          <li><a href="#" class="nav-link">Enterprise</a></li>
-          <li><a href="#" class="nav-link">Pricing</a></li>
+          <li>
+            <a href="#" class="nav-link">Features</a>
+          </li>
+          <li>
+            <a href="#" class="nav-link">Enterprise</a>
+          </li>
+          <li>
+            <a href="#" class="nav-link">Pricing</a>
+          </li>
           <li class="nav-resources">
             <a href="#" id="resource-link" class="nav-link">Resources</a>
             <div class="resource-box">
@@ -493,56 +499,56 @@
             <ul class="logo-list">
               <li class="logo-item">
                 <img
-                  class="logo"
+                  class="logo-company"
                   src="https://ptht05hbb1ssoooe.public.blob.vercel-storage.com/assets/misc/asset-beae7a1f5d7eb381a872.svg"
                   alt="Stripe Logo"
                 />
               </li>
               <li class="logo-item">
                 <img
-                  class="logo"
+                  class="logo-company"
                   src="https://ptht05hbb1ssoooe.public.blob.vercel-storage.com/assets/misc/asset-53062f7690ae5b0cdbed.svg"
                   alt="Open ai Logo"
                 />
               </li>
               <li class="logo-item">
                 <img
-                  class="logo"
+                  class="logo-company"
                   src="https://ptht05hbb1ssoooe.public.blob.vercel-storage.com/assets/misc/asset-eb9e0a5931092d4db1dd.svg"
                   alt="Linear Logo"
                 />
               </li>
               <li class="logo-item">
                 <img
-                  class="logo"
+                  class="logo-company"
                   src="https://ptht05hbb1ssoooe.public.blob.vercel-storage.com/assets/misc/asset-da55192921531e5fd2ba.svg"
                   alt="Datadog Logo"
                 />
               </li>
               <li class="logo-item">
                 <img
-                  class="logo"
+                  class="logo-company"
                   src="https://ptht05hbb1ssoooe.public.blob.vercel-storage.com/assets/misc/asset-e3678011b17782740f98.svg"
                   alt="Nvidia Logo"
                 />
               </li>
               <li class="logo-item">
                 <img
-                  class="logo"
+                  class="logo-company"
                   src="https://ptht05hbb1ssoooe.public.blob.vercel-storage.com/assets/misc/asset-105275382af564c3ab7c.svg"
                   alt="Figma Logo"
                 />
               </li>
               <li class="logo-item">
                 <img
-                  class="logo"
+                  class="logo-company"
                   src="https://ptht05hbb1ssoooe.public.blob.vercel-storage.com/assets/misc/asset-cf60827b1c3f341d19ef.svg"
                   alt="Ramp Logo"
                 />
               </li>
               <li class="logo-item">
                 <img
-                  class="logo"
+                  class="logo-company"
                   src="https://ptht05hbb1ssoooe.public.blob.vercel-storage.com/assets/misc/asset-37d2d1a1edcce15ca38c.svg"
                   alt="Adobe Logo"
                 />
@@ -577,7 +583,7 @@
        </section>
 
        <!-- SECTION TESTIMONIALS -->
-        <section class="section-testimonial">
+        <section class="section-testimonials ">
           <div class="container">
             <h2 class="text-center letter-spacing-sm mb-md">The new way to build software.</h2>
           </div>
@@ -652,8 +658,51 @@
               </div>
             </div>
            </div>
+        </section>
+           <!-- USE SECTION -->
+            <section class="section-use">
+              <div class="container ">
+                <h2 class="letter-spacing-sm mb-md">Stay on the frontier</h2>
+              </div>
+              <div class="container grid grid--3-cols gap-12">
+                <!-- CARD 1 -->
+                <div class="card flex flex-col gap-2">
+                  <div>
+                    <h3 class="text-primary">Access the best models</h3>
+                    <p>Choose between every cutting-edge model from OpenAI, Anthropic, Gemini, and xAI.</p>
+                  </div>
+                  <p class="text-secondary">Explore models <span> ↗</span></p>
+                  <div class="usecase-img-box">
+                    <img src="./imgs/usecase-1.png" alt="use case 1 png" class="w-full">
+                  </div>
+                </div>
+                <!-- CARD 2 -->
 
-           <!--  -->
+                 <div class="card flex flex-col gap-2">
+                  <div>
+                    <h3 class="text-primary">Complete codebase understanding</h3>
+                    <p>Cursor learns how your codebase works, no matter the scale or complexity.</p>
+                  </div>
+                  <p class="text-secondary">Learn about semantic search <span> ↗</span></p>
+                  <div class="usecase-img-box">
+                    <img src="./imgs/usecase-2.png" alt="use case 2 png" class="w-full">
+                  </div>
+                </div>
+
+                <!-- CARD 3 -->
+
+                <div class="card flex flex-col gap-2">
+                  <div>
+                    <h3 class="text-primary">Develop enduring software</h3>
+                    <p>Trusted by over half of the Fortune 500 to accelerate development, securely and at scale.</p>
+                  </div>
+                  <p class="text-secondary">Explore enterprise <span> ↗</span></p>
+                  <div class="usecase-img-box">
+                    <img src="./imgs/usecase-3.png" alt="use case 2 png" class="w-full">
+                  </div>
+                </div>
+              </div>
+            </section>
         </section>
     </main>
   </body>
