done hero section complete

--- a/Projects/Landing-Pages/Mintlify/index.html
+++ b/Projects/Landing-Pages/Mintlify/index.html
@@ -42,6 +42,47 @@
           </div>
         </div>
       </nav>
+      <div class="flex items-center justify-center mt-44">
+        <div class="hero-banner flex gap-2 items-center">
+          <button>New</button>
+          <p>Self-updating docs with ai suggestions</p>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+            fill="currentColor"
+            class="icon"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25Zm4.28 10.28a.75.75 0 0 0 0-1.06l-3-3a.75.75 0 1 0-1.06 1.06l1.72 1.72H8.25a.75.75 0 0 0 0 1.5h5.69l-1.72 1.72a.75.75 0 1 0 1.06 1.06l3-3Z"
+              clip-rule="evenodd"
+            />
+          </svg>
+        </div>
+      </div>
+      <div class="mt-2">
+        <!-- HERO SECTION -->
+        <div
+          class="flex flex-col gap-2 items-center justify-center w-half mx-auto"
+        >
+          <div class="hero-title">
+            <h1 class="text-center">The Intelligent Knowledge Platform</h1>
+          </div>
+          <div class="hero-text text-center mx-auto">
+            <div class="text-center">
+              <p>
+                Turn your company’s knowledge into accurate, agent-ready context
+              </p>
+            </div>
+          </div>
+          <div class="hero-form mx-auto">
+            <form action="" class="flex items-center">
+              <input type="email" name="email" placeholder="Email address" />
+              <button class="ml-auto">Start now</button>
+            </form>
+          </div>
+        </div>
+      </div>
     </header>
   </body>
 </html>
