done with the trustedby section

--- a/Projects/Landing-Pages/Mintlify/index.html
+++ b/Projects/Landing-Pages/Mintlify/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <!--HEADER AND NAVIGATION -->
-    <header class="header">
+    <header class="header mb-2xl">
       <nav class="main-nav">
         <div class="container flex justify-between items-center">
           <div>
@@ -60,7 +60,7 @@
           </svg>
         </div>
       </div>
-      <div class="mt-2">
+      <div class="mt-2 mb-2xl">
         <!-- HERO SECTION -->
         <div
           class="flex flex-col gap-2 items-center justify-center w-half mx-auto"
@@ -83,6 +83,73 @@
           </div>
         </div>
       </div>
+      <div class="container">
+        <img
+          class="w-full"
+          src="/assets/svgs/hero-image-dark.svg"
+          alt="Dark Image showing App "
+        />
+      </div>
     </header>
+
+    <main>
+      <!-- SECTION TRUSTED-BY -->
+      <section class="section-trustedBy">
+        <div class="container grid grid-cols--4 gap-md items-center">
+          <div class="p-2">
+            <img
+              class="w-full"
+              src="/assets/svgs/logos/anthrophic.svg"
+              alt="Antrophic logo"
+            />
+          </div>
+          <div class="p-2">
+            <img
+              src="/assets/svgs/logos/coinbase.svg"
+              alt="Coinbase logo"
+              class="w-full"
+            />
+          </div>
+          <div class="p-2">
+            <img
+              src="/assets/svgs/logos/microsoft.svg"
+              alt="Microsoft logo"
+              class="w-full"
+            />
+          </div>
+          <div class="p-2">
+            <img
+              src="/assets/svgs/logos/perplexity.svg"
+              alt="Perplexity logo  "
+              class="w-full"
+            />
+          </div>
+          <div class="p-2">
+            <img
+              src="/assets/svgs/logos/hubspot.svg"
+              alt="Hubspot logo"
+              class="w-full"
+            />
+          </div>
+          <div class="p-2 justify-self-center">
+            <img src="/assets/svgs/logos/x.svg" alt="X logo" class="h-full" />
+          </div>
+          <div class="p-2">
+            <img
+              src="/assets/svgs/logos/paypal.svg"
+              alt="Paypal logo"
+              class="w-full"
+            />
+          </div>
+          <div class="p-2">
+            <img
+              src="/assets/svgs/logos/lovable.svg"
+              alt="Lovable logo"
+              class="w-full"
+            />
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
