done section assistant

--- a/Projects/Landing-Pages/Mintlify/index.html
+++ b/Projects/Landing-Pages/Mintlify/index.html
@@ -159,7 +159,7 @@
       </section>
 
       <!-- SECTION FEATURES -->
-      <section class="section-features">
+      <section class="section-features mb-2">
         <div class="container flex flex-col items-center gap-2 mb-md">
           <h2 class="text-lg fw-bold">Built for the intelligence age</h2>
           <p class="text-center feature-text">
@@ -200,6 +200,25 @@
               />
             </div>
           </div>
+        </div>
+      </section>
+
+      <!-- SECTION ASSISTANT / UI PREVIEW -->
+      <section class="section-assistant container card mb-2zl">
+        <div class="container flex flex-col items-center gap-2 mb-md">
+          <p class="text-primary text-upper">Assistant</p>
+          <h2 class="">Intelligent assistance for your users</h2>
+          <p class="w-60 text-md mt-2 text-gray">
+            Turn every documentation visit into a guided conversation. Your AI
+            assistant understands context and delivers what users need.
+          </p>
+        </div>
+        <div>
+          <img
+            class="w-full"
+            src="/assets/imgs/ui-preview.png"
+            alt="UI Preview Image"
+          />
         </div>
       </section>
     </main>
