--- a/Projects/Landing-Pages/Mintlify/index.html
+++ b/Projects/Landing-Pages/Mintlify/index.html
@@ -204,7 +204,7 @@
       </section>
 
       <!-- SECTION ASSISTANT / UI PREVIEW -->
-      <section class="section-assistant container card mb-2zl">
+      <section class="section-assistant container card mb-2xl">
         <div class="container flex flex-col items-center gap-2 mb-md">
           <p class="text-primary text-upper">Assistant</p>
           <h2 class="">Intelligent assistance for your users</h2>
@@ -221,6 +221,96 @@
           />
         </div>
       </section>
+
+      <!-- SECTION Enterprise -->
+      <section class="section-enterprise bg-gray--dark mb-2xl">
+        <div class="container flex flex-col gap-2 mb-lg">
+          <p class="text-upper text-primary">Enterprise-reinvention</p>
+          <h2 class="w-half text-lg fw-bold lh-12">
+            Bring intelligence to enterprise knowledge
+          </h2>
+          <div class="flex justify-between items-center">
+            <p class="text-gray">
+              Modernize without the rebuild with enterprise-grade professional
+              service & security.
+            </p>
+            <button class="btn btn--full">Explore for enterprise</button>
+          </div>
+        </div>
+        <div class="container enterprise-card grid grid-cols--2 gap-2 mb-md">
+          <div class="flex flex-col gap-2">
+            <img
+              src="/assets/svgs/enterprise-1.svg"
+              alt="Logo for enterprise"
+            />
+            <h3>Build with partnership</h3>
+            <p class="text-gray">
+              Direct, white-glove access to our documentation experts. Dedicated
+              migration support and guidance tailored to your setup, and
+              elevated support SLAs.
+            </p>
+          </div>
+          <div class="flex flex-col gap-2">
+            <img src="/assets/svgs/enterprise2.svg" alt="Logo for enterprise" />
+            <h3>Compliance and access control</h3>
+            <p class="text-gray">
+              Compliant with SOC 2, and in the process for ISO/27001 and GDPR
+              compliance to meet your internal and external data requirements.
+              Secure access and provisioning with SAML-based SSO.
+            </p>
+          </div>
+        </div>
+
+        <!-- Image -->
+        <div class="container">
+          <div class="relative image-box">
+            <div class="gradient"></div>
+            <img
+              class="w-full rounded-lg"
+              src="https://www.mintlify.com/enterprise/anthropic.svg"
+              alt="Showing Image related to enterpris"
+            />
+            <div class="flex flex-col gap-2 above-text">
+              <p class="text-upper font-bold text-md">Customer story</p>
+              <h3 class="w-half text-md font-bold">
+                See how Anthropic accelerates AI development with Mintlify
+              </h3>
+              <div>
+                <p>Read story <span>&rarr;</span></p>
+              </div>
+              <div class="mt-2xl">
+                <div class="flex gap-2 justify-center">
+                  <div>
+                    <p class="text-lg font-bold">2M+</p>
+                    <p class="text-gray">Monthly active developers</p>
+                  </div>
+                  <div>
+                    <p class="text-lg font-bold">3M+</p>
+                    <p class="text-gray w-half">
+                      Products serviced: Claude API, MCP, and Claude Code
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="container mt-44">
+          <div class="flex items-center gap-md company-logo w-80 mx-auto">
+            <img src="/assets/svgs/logos/anthrophic.svg" alt="Anthropic Logo" />
+            <img src="/assets/svgs/logos/coinbase.svg" alt="Coinbase Logo" />
+            <img src="/assets/svgs/logos/hubspot.svg" alt="Hubspot Logo" />
+            <img src="/assets/svgs/logos/lovable.svg" alt="Lovable Logo" />
+            <img
+              src="/assets/svgs/logos/perplexity.svg"
+              alt="Perplexity Logo"
+            />
+          </div>
+        </div>
+      </section>
+
+      <!--  -->
     </main>
   </body>
 </html>
