complete desktop version

--- a/Projects/Landing-Pages/Mintlify/index.html
+++ b/Projects/Landing-Pages/Mintlify/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MintlifyAI | Landing Page</title>
+    <title>Mintlify &mdash; The Intelligent Documentation Platform</title>
     <link
       rel="shortcut icon"
-      href="/assets/svgs/logo.svg"
+      href="/assets/icon.jpeg"
       type="image/x-icon"
     />
     <!-- INTER FONT -->
@@ -29,7 +29,7 @@
             <a href="/">
               <img
                 class="align-self"
-                src="/assets/imgs/logo.png"
+                src="/assets/svgs/logo.svg"
                 alt="Mintlify Logo"
               />
             </a>
@@ -56,7 +56,7 @@
           <svg
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 24 24"
-            fill="currentColor"
+            fill="#606163"
             class="icon"
           >
             <path
@@ -461,7 +461,7 @@
       </section>
 
       <!-- SECTION CTA -->
-      <section class="section-cta pb-2xl mb-2xl">
+      <section class="section-cta pb-2xl">
         <div class="container flex flex-col gap-2 items-center">
           <div class="w-48 text-center lh-12">
             <h2 class="font-bold text-lg">
@@ -498,8 +498,104 @@
           </div>
         </div>
       </section>
-
-      <!-- SECTION FOOTER -->
     </main>
+    <!-- SECTION FOOTER -->
+    <footer class="section-footer">
+      <div
+        class="container flex justify-between items-center footer-top p-md box-left box-right box-bottom"
+      >
+        <img src="/assets/svgs/logo.svg" alt="Mintlify Logo" />
+        <div class="flex gap-2 items-center">
+          <img
+            class="logo"
+            src="/assets/socials/linkedin.svg"
+            alt="LinkedIn Logo"
+          />
+          <img class="logo" src="/assets/socials/x.svg" alt="X Logo" />
+
+          <img
+            class="logo"
+            src="/assets/socials/github.svg"
+            alt="GitHub Logo"
+          />
+        </div>
+      </div>
+      <div class="container box-left box-right box-bottom p-md">
+        <nav class="grid grid-cols--5 gap-md footer-nav">
+          <div>
+            <h3 class="text-gray text-upper">Explore</h3>
+            <ul class="flex flex-col gap-2 mt-2">
+              <li><a href="#">Startups</a></li>
+              <li><a href="#">Enterprise</a></li>
+              <li><a href="#">Switch</a></li>
+              <li><a href="#">OSS Program</a></li>
+            </ul>
+          </div>
+          <div>
+            <h3 class="text-gray text-upper">Resources</h3>
+            <ul class="flex flex-col gap-2 mt-2">
+              <li><a href="#">Customers</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Pricing</a></li>
+              <li><a href="#">Guides</a></li>
+              <li><a href="#">Feature Requests</a></li>
+            </ul>
+          </div>
+          <div>
+            <h3 class="text-gray text-upper">Documentation</h3>
+            <ul class="flex flex-col gap-2 mt-2">
+              <li><a href="#">Getting Started</a></li>
+              <li><a href="#">API Reference</a></li>
+              <li><a href="#">Components</a></li>
+              <li><a href="#">Changelog</a></li>
+            </ul>
+          </div>
+          <div>
+            <h3 class="text-gray text-upper">Company</h3>
+            <ul class="flex flex-col gap-2 mt-2">
+              <li><a href="#">Careers</a></li>
+              <li><a href="#">Wall of Love</a></li>
+            </ul>
+          </div>
+          <div>
+            <h3 class="text-gray text-upper">Legal</h3>
+            <ul class="flex flex-col gap-2 mt-2">
+              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">Responsible Disclosure</a></li>
+              <li><a href="#">Terms Of Service</a></li>
+              <li><a href="#">Security</a></li>
+              <li><a href="#">DSR/DSAR</a></li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+      <div class="container p-2 box-left box-right box-bottom footer-bottom">
+       <div class="flex items-center gap-2">
+        <p>Backed by enterprise-grade security</p>
+       <div class="z-50 select-none"><svg width="93" height="93" viewBox="0 0 93 93" class="w-full h-full" style="transform:rotate(-20deg)"><defs><path id="circle-path" d="M 46.5 46.5 m -31.5 0 a 31.5 31.5 0 1 1 63 0 a 31.5 31.5 0 1 1 -63 0"></path></defs><text font-size="4" fill="#fff" class=""><textPath href="#circle-path" startOffset="0%">SOC for Service Organizations | Service Organization</textPath></text></svg></div>
+       </div>
+
+       <div class="container">
+        <div class="flex justify-between ">
+          <div class="glassy">
+            All systems normal
+          </div>
+          <div>
+            <p class="text-gray">&copy; 2026 Mintlify, Inc.</p>
+          </div>
+          <div class="glassy buttons">
+            <button class="">
+                      <span>🖥</span>
+                    </button>
+                    <button class="">
+                      <span>☉</span>
+                    </button>
+                    <button class="">
+                      <span>☾</span>
+                    </button>
+          </div>
+        </div>
+       </div>
+    </footer>
   </body>
 </html>
