change default scrollbar

--- a/Projects/Landing-Pages/Mintlify/index.html
+++ b/Projects/Landing-Pages/Mintlify/index.html
@@ -15,11 +15,11 @@
       rel="stylesheet"
     />
     <!-- Min CSS -->
-    <link rel="stylesheet" href="/css/general.min.css" />
-    <link rel="stylesheet" href="/css/style.min.css" />
+    <!-- <link rel="stylesheet" href="/css/general.min.css" />
+    <link rel="stylesheet" href="/css/style.min.css" /> -->
     <!-- CUSTOM CSS -->
-    <!-- <link rel="stylesheet" href="/css/general.css" />
-    <link rel="stylesheet" href="/css/style.css" /> -->
+    <link rel="stylesheet" href="/css/general.css" />
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
     <!--HEADER AND NAVIGATION -->
