update css of customer button

--- a/Projects/Landing-Pages/Mintlify/index.html
+++ b/Projects/Landing-Pages/Mintlify/index.html
@@ -450,12 +450,14 @@
           </div>
         </div>
         <div class="container mt-44">
-          <div class="items-center justify-center flex gap-2 w-half mx-auto">
-            <button class="btn btn-bg--gray btn--full">
-              <span>&larr;</span>
+          <div
+            class="items-center customer-buttons justify-center flex gap-2 w-half mx-auto"
+          >
+            <button class="btn customer-btn--left">
+              <span class="text-lg">&larr;</span>
             </button>
-            <button class="btn btn-bg--gray btn--full">
-              <span>&rarr;</span>
+            <button class="btn customer-btn--right">
+              <span class="text-lg">&rarr;</span>
             </button>
           </div>
         </div>
