add responsive css

--- a/Projects/Landing-Pages/Mintlify/index.html
+++ b/Projects/Landing-Pages/Mintlify/index.html
@@ -20,6 +20,7 @@
     <!-- CUSTOM CSS -->
     <link rel="stylesheet" href="/css/general.css" />
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/responsive.css" />
   </head>
   <body>
     <!--HEADER AND NAVIGATION -->
