--- a/Projects/Landing-Pages/Cursor/index.html
+++ b/Projects/Landing-Pages/Cursor/index.html
@@ -8,6 +8,7 @@
     <!-- Linking CSS -->
     <link rel="stylesheet" href="css/general.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/responsive.css" />
   </head>
   <body>
     <!-- Navbar -->
